# latero-graphics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  TODO  doxygen.cfg  latero-graphics.pc.cmake
.github/workflows/: docs.yml
cmake/: laterographicsConfig.cmake.in
latero-graphics/: CMakeLists.txt  audiodevice.cpp  audiodevice.h  audiodevicefwd.h  audioengine.cpp  audioengine.h  audioenginefwd.h  averagefilter.cpp  averagefilter.h  buttonevent.h  cmake_install.cmake  engine.cpp  engine.h  external.h  generator.cpp  generator.h  generatorfwd.h  graph.cpp  graph.h  grating.cpp  grating.h  gratingfwd.h  gratinggraph.cpp  gratinggraph.h  gratingmodulator.cpp  gratingmodulator.h  gratingmodulatorfwd.h  gratingmodulatorwidget.cpp  gratingmodulatorwidget.h  gratingwidget.cpp  gratingwidget.h  logger.cpp  logger.h  mainpage.h  mask.cpp  mask.h  maskfwd.h  maskwidget.cpp  maskwidget.h  modifiable.h  (+47 more)
latero-graphics/graphics/: CMakeLists.txt  audiopattern.cpp  audiopattern.h  audiopatternfwd.h  canvas.cpp  canvas.h  canvasfwd.h  canvaswidget.cpp  canvaswidget.h  circle.cpp  circle.h  circlefwd.h  circlewidget.cpp  circlewidget.h  closedpattern.cpp  closedpattern.h  closedpatternfwd.h  closedpatternwidget.cpp  closedpatternwidget.h  dot.cpp  dot.h  dotfwd.h  dotpattern.cpp  dotpattern.h  dotpatternfwd.h  dotpatternwidget.cpp  dotpatternwidget.h  dots.cpp  dots.h  dotsfwd.h  dotswidget.cpp  dotswidget.h  dotwidget.cpp  dotwidget.h  group.cpp  group.h  groupfwd.h  groupwidget.cpp  groupwidget.h  image.cpp  (+34 more)
latero-graphics/graphics/modulator/: CMakeLists.txt  dirmodulator.cpp  dirmodulator.h  dirmodulatorfwd.h  dirmodulatorwidget.cpp  dirmodulatorwidget.h  modulator.cpp  modulator.h  modulatorcombo.cpp  modulatorcombo.h  modulatordropdown.cpp  modulatordropdown.h  modulatorfwd.h  modulatorpreview.cpp  modulatorpreview.h  velmodulator.cpp  velmodulator.h  velmodulatorfwd.h  velmodulatorwidget.cpp  velmodulatorwidget.h
latero-graphics/graphics/texture/: CMakeLists.txt  axialgratingtexture.cpp  axialgratingtexture.h  axialgratingtexturefwd.h  axialgratingtexturewidget.cpp  axialgratingtexturewidget.h  blendtexture.cpp  blendtexture.h  blendtexturefwd.h  blendtexturewidget.cpp  blendtexturewidget.h  combotexture.cpp  combotexture.h  combotexturefwd.h  doublelineargratingtexture.cpp  doublelineargratingtexture.h  doublelineargratingtexturefwd.h  doublelineargratingtexturewidget.cpp  doublelineargratingtexturewidget.h  gratingtexture.cpp  gratingtexture.h  gratingtexturefwd.h  gratingtexturewidget.cpp  gratingtexturewidget.h  lineargratingtexture.cpp  lineargratingtexture.h  lineargratingtexturefwd.h  lineargratingtexturewidget.cpp  lineargratingtexturewidget.h  motiontexture.cpp  motiontexture.h  motiontexturefwd.h  motiontexturewidget.cpp  motiontexturewidget.h  nulltexture.cpp  nulltexture.h  nulltexturefwd.h  patternops.cpp  patternops.h  patterntexture.cpp  (+32 more)
latero-graphics/gtk/: CMakeLists.txt  animation.cpp  animation.h  blobdetector.cpp  blobdetector.h  checkframe.cpp  checkframe.h  imagecombo.cpp  imagecombo.h  imagedropdown.cpp  imagedropdown.h  numwidget.cpp  numwidget.h  pixbufops.cpp  pixbufops.h  plot.cpp  plot.h  spacer.h
media/: CMakeLists.txt
media/texture/: CMakeLists.txt  axis.tx  bidir.tx  blend.tx  grating-axial.tx  grating-combo.tx  grating-diagonal.tx  grating-dots.tx  grating-horizontal.tx  grating-radial-motion.tx  grating-radial-vib.tx  grating-radial.tx  grating-textured1.tx  grating-textured2.tx  grating-textured3.tx  grating-textured4.tx  grating-textured5.tx  grating-vertical.tx  grid.tx  jaggies.tx  motion.tx  null.tx  omnidir.tx  pattern-grid.tx  plain.tx  slow-vib.tx  unidir.tx  vibration-low.tx
media/texture/pitch-mod/: CMakeLists.txt  axial.tx  linear-peak.tx  linear-slope.tx  radial-abrupt-slope.tx  radial-ring.tx  radial-slope.tx
